--- a/src/main/resources/toolbar.fxml
+++ b/src/main/resources/toolbar.fxml
@@ -83,7 +83,23 @@
                         </MenuItem>
                      </items>
             </Menu>
-            <Menu mnemonicParsing="false" text="Help">
+                  <Menu mnemonicParsing="false" text="View">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#centerViewport" text="Center Viewport">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="SPACE" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                           </accelerator>
+                           <graphic>
+                              <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/light/center.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </MenuItem>
+                     </items>
+                  </Menu>
+            <Menu disable="true" mnemonicParsing="false" text="Help">
               <items>
                 <MenuItem mnemonicParsing="false" text="About" />
               </items>
@@ -126,6 +142,18 @@
                      </graphic>
                      <tooltip>
                         <Tooltip text="Create new layer" />
+                     </tooltip>
+                  </Button>
+                  <Button layoutX="148.0" layoutY="21.0" mnemonicParsing="false" onAction="#centerViewport">
+                     <graphic>
+                        <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@images/light/center.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <tooltip>
+                        <Tooltip text="Center Viewport" />
                      </tooltip>
                   </Button>
           </children>
