--- a/src/main/resources/styling/stylesheet.css
+++ b/src/main/resources/styling/stylesheet.css
@@ -177,6 +177,6 @@
 .text-input {
   -fx-font-size: 12pt;
   -fx-font-weight: normal;
-/ / -fx-text-fill: white !important;
+ /*-fx-text-fill: white !important;*/
 }
 
