--- a/src/main/resources/layer_item.fxml
+++ b/src/main/resources/layer_item.fxml
@@ -25,7 +25,11 @@
                         <TextField fx:id="renameField" onAction="#setName" onKeyPressed="#checkIfCancel" prefHeight="32.0" prefWidth="187.0" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="12.0" />
                         <Button fx:id="renameButton" layoutX="211.0" layoutY="12.0" mnemonicParsing="false" onAction="#setName" prefHeight="32.0" prefWidth="44.0">
                            <graphic>
-                              <ImageView pickOnBounds="true" preserveRatio="true" />
+                              <ImageView fitHeight="21.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/light/checkmark.png" />
+                                 </image>
+                              </ImageView>
                            </graphic>
                         </Button>
                      </children>
@@ -36,13 +40,13 @@
                <children>
                 <HBox alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                   <children>
-                        <Label fx:id="layerName" alignment="CENTER" prefHeight="71.0" prefWidth="84.0" text="Label" textAlignment="CENTER" />
+                        <Label fx:id="layerName" alignment="CENTER" prefHeight="71.0" prefWidth="127.0" text="Label" textAlignment="CENTER" wrapText="true" />
                         <ImageView fx:id="layerPreview" fitHeight="55.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/light/raster.png" />
                            </image>
                            <HBox.margin>
-                              <Insets left="20.0" />
+                              <Insets />
                            </HBox.margin>
                         </ImageView>
                     <ToggleButton fx:id="toggleButton" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#toggleVisibility" prefHeight="34.0" prefWidth="44.0" selected="true" textAlignment="CENTER">
