Tweak background color of color picker

--- a/src/main/resources/styling/stylesheet.css
+++ b/src/main/resources/styling/stylesheet.css
@@ -162,7 +162,7 @@
 }
 
 .color-picker {
-  -fx-background-color: -background-pressed-color;
+  -fx-background-color: -background-color;
 }
 
 #info-pane {
