Any raster tool will now switcht to the doodle tool if they are selected and the layer type changes

--- a/src/main/resources/palette_pane.fxml
+++ b/src/main/resources/palette_pane.fxml
@@ -88,7 +88,7 @@
                 <Tooltip text="Rotate Tool" />
                </tooltip>
             </ToggleButton>
-            <ToggleButton mnemonicParsing="false" onAction="#selectDoodleTool" toggleGroup="$palette">
+            <ToggleButton fx:id="doodleButton" mnemonicParsing="false" onAction="#selectDoodleTool" toggleGroup="$palette">
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                      <image>
