--- a/src/main/resources/palette_pane.fxml
+++ b/src/main/resources/palette_pane.fxml
@@ -8,89 +8,93 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-
-<fx:root prefHeight="400.0" prefWidth="64.0" stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="400.0" prefWidth="64.0" stylesheets="@styling/stylesheet.css" type="AnchorPane"
+  xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="8.0"
+      AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+      AnchorPane.topAnchor="0.0">
       <children>
-            <ToggleButton mnemonicParsing="false" onAction="#selectDoodleTool">
-               <graphic>
-                  <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/light/pencil.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <tooltip>
-                  <Tooltip text="Doodle tool" />
-               </tooltip>
-               <toggleGroup>
-            <ToggleGroup fx:id="palette" />
-               </toggleGroup>
-            </ToggleButton>
-            <ToggleButton mnemonicParsing="false" onAction="#selectRectangleTool" toggleGroup="$palette">
-               <graphic>
-                  <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/light/rectangle.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <tooltip>
-                  <Tooltip text="Rectangle Tool" />
-               </tooltip>
-            </ToggleButton>
-            <ToggleButton mnemonicParsing="false" onAction="#selectMoveTool" toggleGroup="$palette">
-               <graphic>
-                  <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/light/move.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <tooltip>
-                  <Tooltip text="Move Tool" />
-               </tooltip>
-            </ToggleButton>
-            <ToggleButton layoutX="16.0" layoutY="268.0" mnemonicParsing="false" onAction="#selectRotateTool" toggleGroup="$palette">
-               <graphic>
-                  <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/light/rotate.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <tooltip>
-                  <Tooltip text="Rotate Tool" />
-               </tooltip>
-            </ToggleButton>
-        <ToggleButton mnemonicParsing="false" onAction="#selectEraser" toggleGroup="$palette">
+        <ToggleButton mnemonicParsing="false" onAction="#selectDoodleTool">
           <graphic>
             <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
               <image>
-                <Image url="@images/light/eraser.png" />
+                <Image url="@images/light/pencil.png"/>
               </image>
             </ImageView>
           </graphic>
           <tooltip>
-            <Tooltip text="Eraser Tool" />
+            <Tooltip text="Doodle tool"/>
+          </tooltip>
+          <toggleGroup>
+            <ToggleGroup fx:id="palette"/>
+          </toggleGroup>
+        </ToggleButton>
+        <ToggleButton mnemonicParsing="false" onAction="#selectRectangleTool"
+          toggleGroup="$palette">
+          <graphic>
+            <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+              <image>
+                <Image url="@images/light/rectangle.png"/>
+              </image>
+            </ImageView>
+          </graphic>
+          <tooltip>
+            <Tooltip text="Rectangle Tool"/>
+          </tooltip>
+        </ToggleButton>
+        <ToggleButton mnemonicParsing="false" onAction="#selectMoveTool" toggleGroup="$palette">
+          <graphic>
+            <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+              <image>
+                <Image url="@images/light/move.png"/>
+              </image>
+            </ImageView>
+          </graphic>
+          <tooltip>
+            <Tooltip text="Move Tool"/>
+          </tooltip>
+        </ToggleButton>
+        <ToggleButton layoutX="16.0" layoutY="268.0" mnemonicParsing="false"
+          onAction="#selectRotateTool" toggleGroup="$palette">
+          <graphic>
+            <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+              <image>
+                <Image url="@images/light/rotate.png"/>
+              </image>
+            </ImageView>
+          </graphic>
+          <tooltip>
+            <Tooltip text="Rotate Tool"/>
+          </tooltip>
+        </ToggleButton>
+        <ToggleButton mnemonicParsing="false" onAction="#selectEraser" toggleGroup="$palette">
+          <graphic>
+            <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+              <image>
+                <Image url="@images/light/eraser.png"/>
+              </image>
+            </ImageView>
+          </graphic>
+          <tooltip>
+            <Tooltip text="Eraser Tool"/>
           </tooltip>
         </ToggleButton>
         <ToggleButton mnemonicParsing="false" onAction="#selectPencil" toggleGroup="$palette">
           <graphic>
             <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
               <image>
-                <Image url="@images/light/pixels.png" />
+                <Image url="@images/light/pixels.png"/>
               </image>
             </ImageView>
           </graphic>
           <tooltip>
-            <Tooltip text="Pencil Tool" />
+            <Tooltip text="Pencil Tool"/>
           </tooltip>
         </ToggleButton>
       </children>
       <padding>
-        <Insets top="8.0" />
+        <Insets top="8.0"/>
       </padding>
     </VBox>
   </children>
