Fix bad separator styling

--- a/src/main/resources/styling/stylesheet.css
+++ b/src/main/resources/styling/stylesheet.css
@@ -179,7 +179,7 @@
 
 .separator:vertical .line {
   -fx-border-color: transparent transparent transparent transparent,
-  transparent transparent -text-color transparent;
+  transparent transparent transparent -text-color;
 }
 
 .text-field {
