--- a/src/main/resources/info_pane.fxml
+++ b/src/main/resources/info_pane.fxml
@@ -46,10 +46,19 @@
                   <Label text="Layer Size: " />
                   <Label fx:id="layerWidth" text="-" />
                   <Label text="x" />
-                  <Label fx:id="layerHeight" text="-" />
+                  <Label fx:id="layerHeight" prefWidth="40.0" text="-" />
                </children>
                <padding>
                   <Insets left="10.0" right="10.0" />
+               </padding>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" styleClass="infopane-item">
+               <children>
+                  <Label text="Layer Rotation: " />
+                  <Label fx:id="layerRotation" prefWidth="40.0" text="-" />
+               </children>
+               <padding>
+                  <Insets left="10.0" />
                </padding>
             </HBox>
          </children>
