--- a/src/main/resources/styling/stylesheet.css
+++ b/src/main/resources/styling/stylesheet.css
@@ -9,6 +9,7 @@
   -selected-color: #AB82FF;
 
   -background-color: #333333; /* Used for the background of panes. */
+  -background-color-lighter: #696969;
   -background-hover-color: derive(-background-color, 15%);
   -background-pressed-color: derive(-background-color, 25%);
 
@@ -179,7 +180,7 @@
 
 .separator:vertical .line {
   -fx-border-color: transparent transparent transparent transparent,
-  transparent transparent transparent -text-color;
+  transparent transparent transparent -background-color-lighter;
 }
 
 .text-field {
@@ -193,6 +194,6 @@
   /*-fx-text-fill: white !important;*/
 }
 
-#rename-box{
+#rename-box {
   -fx-background-color: rgba(0, 0, 0, 0.40);
 }
