--- a/src/main/resources/styling/stylesheet.css
+++ b/src/main/resources/styling/stylesheet.css
@@ -186,13 +186,15 @@
   -fx-background-color: transparent;
 }
 
-/* TODO: Set color to permanently white*/
 .text-input {
   -fx-font-size: 12pt;
   -fx-font-weight: normal;
-  /*-fx-text-fill: white !important;*/
 }
 
 #rename-box{
   -fx-background-color: rgba(0, 0, 0, 0.40);
+}
+
+#layers-label{
+  -fx-font-size: 20px;
 }
