--- a/src/main/resources/layer_pane.fxml
+++ b/src/main/resources/layer_pane.fxml
@@ -10,8 +10,8 @@
 
 <fx:root prefWidth="310.0" styleClass="pane" stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-      <Label id="layers-label" alignment="CENTER" text="Label" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-    <StackPane fx:id="stackPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
+      <Label id="layers-label" alignment="CENTER" prefHeight="40.0" prefWidth="310.0" text="Layers:" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+    <StackPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
       <children>
         <ScrollPane hbarPolicy="NEVER">
           <content>
@@ -24,7 +24,7 @@
         </ScrollPane>
             <AnchorPane fx:id="emptyLayerPane" StackPane.alignment="CENTER">
                <children>
-            <Label alignment="CENTER" layoutX="19.0" prefHeight="62.0" prefWidth="272.0" text="You currently haver no layers, use the tools on the left to get started!" textAlignment="CENTER" wrapText="true">
+            <Label alignment="CENTER" layoutX="19.0" prefHeight="62.0" prefWidth="272.0" text="You currently haver no layers, use the tools on the left to get started!" textAlignment="CENTER" wrapText="true" AnchorPane.leftAnchor="19.0" AnchorPane.rightAnchor="19.0">
               <font>
                 <Font size="36.0" />
               </font>
